apps/cluster-resources/gke/k8s/cluster-resources-namespace.yaml
# Create cluster-resources namespace
# The cluster-resources will reside within this namespace

apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: cluster-resources
  labels:
    # Allow HTTPRoutes in this namespace to attach to the shared gateway
    shared-gateway-access: "true"
